Added option fill type of none for Asteroid field generation. Added added asteroid size detail to asteroid import.

--- a/Main/SEToolbox/SEToolbox/App.xaml
+++ b/Main/SEToolbox/SEToolbox/App.xaml
@@ -147,6 +147,12 @@
             </ObjectDataProvider.MethodParameters>
         </ObjectDataProvider>
 
+        <ObjectDataProvider x:Key="AsteroidFillTypeEnum" MethodName="GetValues" ObjectType="{x:Type sys:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="support:AsteroidFillType" />
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+
         <Style x:Key="{x:Type Image}" TargetType="Image">
             <Style.Triggers>
                 <Trigger Property="Image.IsEnabled" Value="False">
