--- a/Main/SEToolbox/SEToolbox/Views/WindowSettings.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowSettings.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="SEToolbox.Views.WindowOptions"
+﻿<Window x:Class="SEToolbox.Views.WindowSettings"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:commands="clr-namespace:SEToolbox.Services"
         xmlns:controls="clr-namespace:SEToolbox.Controls"
         xmlns:converters="clr-namespace:SEToolbox.Converters"
         ResizeMode="NoResize" ShowInTaskbar="False" WindowStartupLocation="CenterOwner" WindowStyle="ThreeDBorderWindow"
-        Title="Options" Height="180" Width="400" MinWidth="260" MinHeight="200" MaxWidth="800" MaxHeight="800" Icon="/SEToolbox;component/app.ico" Style="{StaticResource DefaultWindowStyle}"
+        Title="Settings" Height="180" Width="400" MinWidth="260" MinHeight="200" MaxWidth="800" MaxHeight="800" Icon="/SEToolbox;component/app.ico" Style="{StaticResource DefaultWindowStyle}"
         commands:DialogService.IsRegisteredView="True"
         commands:DialogCloser.DialogResult="{Binding CloseResult}"
         FocusManager.FocusedElement="{Binding ElementName=UxStartBox}">
@@ -42,14 +42,14 @@
                             <Binding Path="SEBinPath" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged"/>
                         </TextBox.Text>
                     </TextBox>
-                    <Button Grid.Row="0" Grid.Column="2" Content="..." VerticalAlignment="Center" />
+                    <Button Grid.Row="0" Grid.Column="2" Content="..." VerticalAlignment="Center" Command="{Binding BrowseAppPathCommand}" Padding="4 0" />
                     <TextBlock Grid.Row="1" Grid.Column="0" Text="Custom Voxel Path:" VerticalAlignment="Center" Margin="0,0,4,0"/>
                     <TextBox Grid.Row="1" Grid.Column="1" ToolTip="Specify an additional location for your personal asteroids.">
                         <TextBox.Text>
                             <Binding Path="CustomVoxelPath" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged"/>
                         </TextBox.Text>
                     </TextBox>
-                    <Button Grid.Row="1" Grid.Column="2" Content="..." VerticalAlignment="Center" />
+                    <Button Grid.Row="1" Grid.Column="2" Content="..." VerticalAlignment="Center" Command="{Binding BrowseVoxelPathCommand}" Padding="4 0"/>
                     <TextBlock Grid.Row="2" Grid.Column="0" Text="Check for updates:" VerticalAlignment="Center" Margin="0,0,4,0"/>
                     <CheckBox Grid.Row="2" Grid.Column="1" Content="Always" VerticalAlignment="Center" VerticalContentAlignment="Center" IsChecked="{Binding AlwaysCheckForUpdates}" ToolTip="Check for new updates on startup."/>
                 </Grid>
