Fixed exception due to corrupt asteroid files. Fixed Save was incorrectly allowed on Dedicated Server when not using Elevated privileges. Upped the Asteroid Sphere generation radius from 500 to 3000. I have no idea if 3000 will work. Probably not. Updated to latest SE binaries 01.063.008. Updated version prior to release.

--- a/Main/SEToolbox/SEToolbox/Views/WindowImportVoxel.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowImportVoxel.xaml
@@ -61,11 +61,11 @@
                 <RadioButton Grid.Row="2" Grid.Column="0" Content="Sphere" Margin="0,0,4,0" VerticalAlignment="Center" IsChecked="{Binding IsSphere}"/>
                 <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1" >
                     <Grid Width="100">
-                        <TextBox ToolTip="Radius (M) (1 to 500).  Spheres of less than 202m Radius may not work with rare materials." VerticalAlignment="Center" VerticalContentAlignment="Center">
+                        <TextBox ToolTip="Radius (M) (1 to 3000)." VerticalAlignment="Center" VerticalContentAlignment="Center">
                             <TextBox.Text>
                                 <Binding Path="SphereRadius" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged">
                                     <Binding.ValidationRules>
-                                        <converters:RangeRuleI Min="1" Max="500"/>
+                                        <converters:RangeRuleI Min="1" Max="3000"/>
                                     </Binding.ValidationRules>
                                 </Binding>
                             </TextBox.Text>
