--- a/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
@@ -283,6 +283,10 @@
                         <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=fit_to_size}"/>
                     </Button>
                     <Separator />
+                    <Button Command="{Binding CopyObjectGpsCommand}" ToolTip="Copy GPS">
+                        <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=target}"/>
+                    </Button>
+                    <Separator />
                     <Button Command="{Binding DeleteObjectCommand}" ToolTip="Delete">
                         <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=delete2}"/>
                     </Button>
@@ -409,6 +413,11 @@
                                         <MenuItem Header="Delete" Command="{Binding DeleteObjectCommand}">
                                             <MenuItem.Icon>
                                                 <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=delete2}" />
+                                            </MenuItem.Icon>
+                                        </MenuItem>
+                                        <MenuItem Header="Copy GPS" Command="{Binding CopyObjectGpsCommand}">
+                                            <MenuItem.Icon>
+                                                <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=target}" />
                                             </MenuItem.Icon>
                                         </MenuItem>
                                     </ContextMenu>
